test/parser-iec-61131-3-2/grammar.js
        source_file: $ => repeat(
            choice($.library_element_name, $.library_element_declaration)
        ),

        // COMMENTS
        // extras
        library_element_declaration: $ => choice(
            $.data_type_declaration,
            $.function_declaration,
            $.function_block_declaration,
            $.program_declaration,
            $.configuration_declaration
        ),

        // B.1.2 Constants

        constant: $ => prec.right(choice(
            $.numeric_literal,
            $.character_string,
            $.time_literal,
            $.bit_string_literal,
            $.boolean_literal
        )),

        // B 2.1 Numeric literals

        signed_integer: $ => seq(
            optional(choice("+", "-")),
            $.integer
        ),

        integer: $ => seq(
            $._digit,
            repeat(seq(optional("_"), $._digit))
        ),

        bit_string_literal: $ => seq(
            optional(seq(choice("BYTE", "WORD", "DWORD", "LWORD"), "#")),
            //NOTE: IEC says we should use unsigned_integer here, but it's not defined
            choice($.integer, $.binary_integer, $.octal_integer, $.hex_integer)
        ),

        elementary_type_name: $ => choice(
            $.numeric_type_name,
            $.date_type_name,
            $.bit_string_type_name,
            'STRING', 'WSTRING', 'TIME'
        ),

        numeric_type_name: $ => choice($.integer_type_name, $.real_type_name),

        integer_type_name: $ => choice($.signed_integer_type_name, $.unsigned_integer_type_name),

        signed_integer_type_name: $ => choice("SINT", "INT", "DINT", "LINT"),

        real_type_name: $ => choice("REAL", "LREAL"),

        simple_type_name: $ => $.identifier,

        subrange_type_name: $ => $.identifier,

        enumerated_type_name: $ => $.identifier,

        data_type_declaration: $ => seq(
            "TYPE",
            $.type_declaration,
            $.SEMICOLON,
            repeat(seq($.type_declaration, $.SEMICOLON)),
            "END_TYPE"
        ),

        type_declaration: $ => choice(
            $.single_element_type_declaration,
            $.array_type_declaration,
            $.structure_type_declaration,
            $.string_type_declaration
        ),

        single_element_type_declaration: $ => choice(
            $.simple_type_declaration,
            $.subrange_type_declaration,
            $.enumerated_type_declaration
        ),

        simple_type_declaration: $ => seq(
            $.simple_type_name,
            ":",
            $.simple_spec_init
        ),

        simple_spec_init: $ => seq(
            $.simple_specification,
            optional(seq(":=", $.constant))
        ),

        simple_specification: $ => choice(
            $.elementary_type_name,
            $.simple_type_name
        ),

        subrange_type_declaration: $ => seq(
            $.subrange_type_name,
            ":",
            $.subrange_spec_init
        ),

        subrange_spec_init: $ => seq(
            $.subrange_specification,
            optional(seq(":=", $.signed_integer))
        ),

        subrange_specification: $ => choice(
            seq(
                $.integer_type_name,
                "(",
                $.subrange,
                ")"
            ),
            ($.subrange_type_name)
        ),

        subrange: $ => seq(
            $.signed_integer,
            "..",
            $.signed_integer
        ),

        enumerated_type_declaration: $ => seq(
            $.enumerated_type_name,
            ":",
            $.enumerated_spec_init
        ),

        enumerated_spec_init: $ => seq(
            $.enumerated_specification,
            optional(seq(":=", $.enumerated_value))
        ),

        enumerated_specification: $ => seq(
            "(",
            $.enumerated_value,
            repeat(seq(",", $.enumerated_value)),
            ")"
        ),

        enumerated_value: $ => seq(
            optional(seq($.enumerated_type_name, "#")),
            $.identifier
        ),

        variable_name: $ => $.identifier,

        // B.1.4.1 Directly represented variables

        input_declarations: $ => seq(
            "VAR_INPUT", choice("RETAIN", "NON_RETAIN"),
            $.input_declaration, $.SEMICOLON,
            repeat(seq($.input_declaration, $.SEMICOLON)),
            "END_VAR"
        ),

        input_declaration: $ => choice($.var_init_decl, $.edge_declaration),

        var_init_decl: $ => choice(
            $.var1_init_decl,
            $.array_var_init_decl,
            $.structured_var_init_decl,
            $.fb_name_decl,
            $.string_var_declaration
        ),

        var1_init_decl: $ => seq(
            $.var1_list,
            ":",
            choice($.simple_spec_init, $.subrange_spec_init, $.enumerated_spec_init)
        ),

        var1_list: $ => seq(
            $.variable_name,
            repeat(seq(",", $.variable_name))
        ),

        output_declarations: $ => seq(
            "VAR_OUTPUT", choice("RETAIN", "NON_RETAIN"),
            $.var_init_decl, $.SEMICOLON,
            repeat(seq($.var_init_decl, $.SEMICOLON)),
            "END_VAR"
        ),

        input_output_declarations: $ => seq(
            "VAR_IN_OUT", choice("RETAIN", "NON_RETAIN"),
            $.var_declaration, $.SEMICOLON,
            repeat(seq($.var_declaration, $.SEMICOLON)),
            "END_VAR"
        ),

        var_declaration: $ => choice(
            $.temp_var_decl,
            $.fb_name_decl
        ),

        temp_var_decl: $ => choice(
            $.var1_declaration,
            $.array_var_declaration,
            $.structured_var_declaration,
            $.string_var_declaration
        ),

        var1_declaration: $ => seq(
            $.var1_list, ":",
            choice($.simple_specification, $.subrange_specification, $.enumerated_specification)
        ),

        var_declarations: $ => seq(
            "VAR",
            "CONSTANT",
            $.var_init_decl, $.SEMICOLON,
            repeat(seq($.var_init_decl, $.SEMICOLON)),
            "END_VAR"
        ),

        derived_function_name: $ => $.identifier,

        function_declaration: $ => seq(
            "FUNCTION", $.derived_function_name, ":",
            choice($.elementary_type_name, $.derived_type_name),
            repeat(choice($.function_var_decls, $.io_var_declarations)),
            optional($.function_body),
            "END_FUNCTION"
        ),

        io_var_declarations: $ => choice(
            $.input_declarations,
            $.output_declarations,
            $.input_output_declarations
        ),

        function_var_decls: $ => seq(
            "VAR", optional("CONSTANT"),
            $.var2_init_decl, $.SEMICOLON,
            repeat(seq($.var2_init_decl, $.SEMICOLON)),
            "END_VAR"
        ),

        // TODO Add support for more languages
        var2_init_decl: $ => choice(
            $.var1_init_decl,
            $.array_var_init_decl,
            $.structured_var_init_decl,
            $.string_var_declaration
        ),

        // B.1.5.2 Function blocks

        derived_function_block_name: $ => $.identifier,

        function_block_declaration: $ => seq(
            "FUNCTION_BLOCK", $.derived_function_block_name,
            repeat(choice($.io_var_declarations, $.other_var_declarations)),
            $.function_block_body,
            "END_FUNCTION_BLOCK"
        ),

        other_var_declarations: $ => choice(
            $.external_var_declarations,
            $.var_declarations,
            $.retentive_var_declarations,
            $.non_retentive_var_declarations,
            $.temp_var_decls,
            $.incompl_located_var_declarations
        ),

        temp_var_decls: $ => seq(
            "VAR_TEMP",
            $.temp_var_decl, $.SEMICOLON,
            repeat(seq($.temp_var_decl, $.SEMICOLON)),
            "END_VAR"
        ),

        _digit: $ => /[0-9]/,
        identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

        // Improve error recovery for missing punctuation:
