packages/parser-iec-61131-3-2/test/corpus/type_declaration/single_element_type/all.txt
==================
All types declaration
==================

TYPE
    Current : INT( 0..45 );
    Color : INT := 24;
    ValveState : ( Open, Closed, Failed );
END_TYPE

---

    (source_file
      (library_element_declaration
        (data_type_declaration
          (type_declaration
            (single_element_type_declaration
              (subrange_type_declaration
                (subrange_type_name
                  (identifier))
                (subrange_spec_init
                  (subrange_specification
                    (integer_type_name
                      (signed_integer_type_name))
                    (subrange
                      (signed_integer
                        (integer))
                      (signed_integer
                        (integer))))))))
          (type_declaration
            (single_element_type_declaration
              (simple_type_declaration
                (simple_type_name
                  (identifier))
                (simple_spec_init
                  (simple_specification
                    (elementary_type_name
                      (numeric_type_name
                        (integer_type_name
                          (signed_integer_type_name)))))
                  (constant
                    (bit_string_literal
                      (integer)))))))
          (type_declaration
            (single_element_type_declaration
              (enumerated_type_declaration
                (enumerated_type_name
                  (identifier))
                (enumerated_spec_init
                  (enumerated_specification
                    (enumerated_value
                      (identifier))
                    (enumerated_value
                      (identifier))
                    (enumerated_value
                      (identifier))))))))))
