test/parser-iec-61131-3-2/test/corpus/type_declaration/single_element_type/type_simple.txt
==================
Simple type declaration
==================

TYPE
    Color : INT := 24;
END_TYPE

---

    (source_file
      (library_element_declaration
        (data_type_declaration
          (type_declaration
            (single_element_type_declaration
              (simple_type_declaration
                (simple_type_name
                  (identifier))
                (simple_spec_init
                  (simple_specification
                    (elementary_type_name
                      (numeric_type_name
                        (integer_type_name
                          (signed_integer_type_name)))))
                  (constant
                    (bit_string_literal
                      (integer))))))))))
